syntax = "proto3";

package internal;

option go_package = "github.com/jyablonski/lotus/internal/user_pb/gen/go/proto/user;user_pb";

import "google/api/annotations.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  rpc CreateUserOauth(CreateUserOauthRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/oauth/users"
      body: "*"
    };
  }

  // GET http://localhost:8080/v1/journals?user_id=USER_ID_HERE
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserOauthRequest {
  string email = 1;
  string oauth_provider = 2;
}

message CreateUserResponse {
  string user_id = 1;
}

message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  string user_id = 1;
  string email = 2;
  string role = 3;
  string created_at = 4;
  string updated_at = 5;
}